<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvInput"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/black"
        android:padding="10dp"
        android:textSize="48sp"
        android:textColor="@color/white"
        android:gravity="end|bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:background="@color/black"
        >
        <Button
            android:id="@+id/btnClear"
            android:layout_margin="2dp"
            android:text="@string/Clear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onClear"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:backgroundTint="@color/grey"
            />
        <Button
            android:id="@+id/btnDivide"
            android:layout_margin="2dp"
            android:text="@string/_Divide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="30sp"
            android:onClick="onOperator"
            android:backgroundTint="@color/orange"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:background="@color/black"
        >
        <Button
            android:id="@+id/btnSeven"
            android:layout_margin="2dp"
            android:text="@string/_7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="30sp"
            android:onClick="onDigit"
            />
        <Button
            android:id="@+id/btnEight"
            android:layout_margin="2dp"
            android:text="@string/_8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="30sp"
            android:onClick="onDigit"
            />
        <Button
            android:id="@+id/btnNine"
            android:layout_margin="2dp"
            android:text="@string/_9"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="30sp"
            android:onClick="onDigit"
            />
        <Button
            android:id="@+id/btnMultiply"
            android:layout_margin="2dp"
            android:text="@string/x"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="28sp"
            android:onClick="onOperator"
            android:backgroundTint="@color/orange"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:background="@color/black"
        >
        <Button
            android:id="@+id/btnFour"
            android:layout_margin="2dp"
            android:text="@string/_4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="30sp"
            android:onClick="onDigit"
            />
        <Button
            android:id="@+id/btnFive"
            android:layout_margin="2dp"
            android:text="@string/_5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="30sp"
            android:onClick="onDigit"
            />
        <Button
            android:id="@+id/btnSix"
            android:layout_margin="2dp"
            android:text="@string/_6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="30sp"
            android:onClick="onDigit"
            />
        <Button
            android:id="@+id/btnMinus"
            android:layout_margin="2dp"
            android:text="@string/_Minus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="30sp"
            android:onClick="onOperator"
            android:backgroundTint="@color/orange"

            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:background="@color/black"
        >
        <Button
            android:id="@+id/btnOne"
            android:layout_margin="2dp"
            android:text="@string/_1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="30sp"
            android:onClick="onDigit"
            />
        <Button
            android:id="@+id/btnTwo"
            android:layout_margin="2dp"
            android:text="@string/_2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="30sp"
            android:onClick="onDigit"
            />
        <Button
            android:id="@+id/btnThree"
            android:layout_margin="2dp"
            android:text="@string/_3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="30sp"
            android:onClick="onDigit"
            />
        <Button
            android:id="@+id/btnPlus"
            android:layout_margin="2dp"
            android:text="@string/_Plus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="30sp"
            android:onClick="onOperator"
            android:backgroundTint="@color/orange"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:background="@color/black"
        >
        <Button
            android:id="@+id/btnZero"
            android:layout_margin="2dp"
            android:text="@string/_0"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:onClick="onDigit"
            android:textSize="30sp"
            />
        <Button
            android:id="@+id/btnDot"
            android:layout_margin="2dp"
            android:text="@string/_Dot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="30sp"
            android:onClick="onDecimalPoint"
            />
        <Button
            android:id="@+id/btnEquals"
            android:layout_margin="2dp"
            android:text="@string/_Equals"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onEqual"
            android:textSize="30sp"
            android:backgroundTint="@color/orange"
            />
    </LinearLayout>

</LinearLayout>